--- a/assets/style.css
+++ b/assets/style.css
@@ -26,7 +26,7 @@ main{
     justify-content: center;
 }
 
-section{
+#card{
     border-radius: 10px;
     padding: 20px;
     display: flex;
@@ -93,3 +93,8 @@ footer{
     justify-content: center;
     background-color: #8080808f;
 }
+
+/*nicio modal */
+
+
+/*final modal */
